infrastructure/configs/dev/contour/gateway.yml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour
  namespace: projectcontour
spec:
  listeners:
    # internal
    - name: internal-https
      hostname: '*.dev.${domain}'
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: '*.dev.${domain}'
      allowedRoutes:
        namespaces:
          from: All
